--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^1.0.6",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -42,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "mdb-react-ui-kit": "^6.2.0",
     "tailwindcss": "^3.3.3"
   }
 }
